--- a/city/src/index.css
+++ b/city/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
